workloads/k8s-agents/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-agents-apiserver
  namespace: k8s-agents
  labels:
    app: k8s-agents-apiserver
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: k8s-agents-apiserver
